--- a/roles/container-engine/docker/tasks/main.yml
+++ b/roles/container-engine/docker/tasks/main.yml
@@ -99,28 +99,28 @@
     - docker-ce
     - docker-ce-cli
 
-- name: ensure docker packages are installed
-  package:
-    name: "{{ docker_package_info.pkgs }}"
-    state: "{{ docker_package_info.state | default('present') }}"
-  module_defaults:
-    apt:
-      update_cache: true
-    dnf:
-      enablerepo: "{{ docker_package_info.enablerepo | default(omit) }}"
-    yum:
-      enablerepo: "{{ docker_package_info.enablerepo | default(omit) }}"
-    zypper:
-      update_cache: true
-  register: docker_task_result
-  until: docker_task_result is succeeded
-  retries: 4
-  delay: "{{ retry_stagger | d(3) }}"
-  notify: restart docker
-  when:
-    - not ansible_os_family in ["Flatcar Container Linux by Kinvolk"]
-    - not is_ostree
-    - docker_package_info.pkgs|length > 0
+      #- name: ensure docker packages are installed
+      #  package:
+      #    name: "{{ docker_package_info.pkgs }}"
+      #    state: "{{ docker_package_info.state | default('present') }}"
+      #  module_defaults:
+      #    apt:
+      #      update_cache: true
+      #    dnf:
+      #      enablerepo: "{{ docker_package_info.enablerepo | default(omit) }}"
+      #    yum:
+      #      enablerepo: "{{ docker_package_info.enablerepo | default(omit) }}"
+      #    zypper:
+      #      update_cache: true
+      #  register: docker_task_result
+      #  until: docker_task_result is succeeded
+      #  retries: 4
+      #  delay: "{{ retry_stagger | d(3) }}"
+      #  notify: restart docker
+      #  when:
+      #    - not ansible_os_family in ["Flatcar Container Linux by Kinvolk"]
+      #    - not is_ostree
+      #    - docker_package_info.pkgs|length > 0
 
 # This is required to ensure any apt upgrade will not break kubernetes
 - name: Tell Debian hosts not to change the docker version with apt upgrade
